# mcp-agent-transport

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHAT_UI_SETUP.md  CLAUDE.md  DEVELOPER_GUIDE.md  LANGCHAIN_1.0_NOTES.md  PROJECT_OVERVIEW.md  README.md  SETUP_GUIDE.md  diagnose_amadeus.py  langgraph.json  main.py  mcp_config.json  pyproject.toml  requirements.txt  server.py  test_agent.py
.claude/: settings.local.json
agent/: __init__.py  graph.py  prompts.py  tools.py
apis/: __init__.py  amadeus.py  buses.py  trains.py
mcp_client/: __init__.py  client.py
static/: index.html  script.js  style.css
