[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agent-transport"
version = "0.1.0"
description = "LangGraph ReAct agent for finding European transportation routes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.2.0",
    "amadeus>=8.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.4.0"
]

[tool.setuptools.packages.find]
include = ["agent*", "apis*", "mcp_client*"]
